fix scrollbar decreasing width error

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,9 @@ $mq-breakpoints: (
 .bp3-navbar {
   box-shadow: none;
 }*/
+html{
+  overflow-y: scroll;
+}
 
 
 .container {
